--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
-    <title>Pokemon Node</title>
+    <title>On Check</title>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="/css/materialize.min.css"  media="screen,projection"/>
@@ -17,7 +17,7 @@
   <body>
 
   <div id="bg">
-    <img src="/images/ball_background_opaque.png" alt="">
+    <img <!-- src="/images/ball_background_opaque.png" --> alt="">
   </div>
 
   <div id="webpage">
@@ -51,7 +51,7 @@
     <footer class="page-footer white">
       <div class="footer-copyright">
         <div class="container grey-text text-darken-2">
-          Muddled through by <a href="https://github.com/randomraccoon">Cameron</a> 2017
+          Created by <a href="https://github.com/bmcgrane302">Brian</a> <a href="https://github.com/randomraccoon">Cameron</a> and <a href="https://github.com/jessicaanais">Jessica</a> 2017
         </div>
       </div>
     </footer>
