--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,13 +1,36 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <% include ../partials/links-and-scripts %>
-    <!-- links and scripts that should go only on this page go here (outside partial) -->
-  </head>
-  <body>
-    <img src="/images/filler.jpg" height="32px" width="32px" alt="Here for demonstration purposes only. Feel free to delete me!">
-    <h1 class="light-font">Howdy howdy howdy!</h1>
-  </body>
-</html>
+<%- contentFor('body') %>
+<div class="row">
+   <form class="col s6">
+     <h3>Child Login</h3>
+     <div class="row">
+       <div class="input-field col s12">
+         <input placeholder="Placeholder" id="username" name="username" type="text" class="validate">
+         <label for="username">Username</label>
+       </div>
+     </div>
+     <div class="row">
+       <div class="input-field col s12">
+         <input id="password" type="password" name="password" class="validate">
+         <label for="password">Password</label>
+       </div>
+     </div>
+   </form>
+   <form class="col s6">
+     <h3>Parent Login</h3>
+     <div class="row">
+       <div class="input-field col s12">
+         <input placeholder="Placeholder" id="username" name="username" type="text" class="validate">
+         <label for="username">Username</label>
+       </div>
+     </div>
+     <div class="row">
+       <div class="input-field col s12">
+         <input id="password" type="password" name="password" class="validate">
+         <label for="password">Password</label>
+       </div>
+     </div>
+   </form>
+ </div>
+ <div class="center-align">
+   <a class="waves-effect waves-light btn-large"><i class="material-icons left">cloud</i>Register</a>
+ </div>
