--- a/public/css/master.css
+++ b/public/css/master.css
@@ -1,11 +1,59 @@
+#bg
+{
+    position: fixed;
+    z-index: 0;
+    top: -50%;
+    left: -50%;
+
+    width: 200%;
+    height: 200%;
+}
+#bg img
+{
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    min-width: 50%;
+    min-height: 50%;
+    margin: auto;
+}
+
+#webpage
+{
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+        flex-direction: column;
+
+    min-height: 100vh;
+}
+
 body
 {
-    font-family: 'Lato', sans-serif;
-
     margin: 0;
 }
 
-.light-font
+main
 {
-    font-weight: 300;
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 auto;
+        flex: 1 0 auto;
+}
+
+footer.page-footer
+{
+    padding-top: 0;
 }
