Fix footer cleanup layout file

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,18 +9,12 @@
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="/css/materialize.min.css"  media="screen,projection"/>
-    <link rel='stylesheet' href='/css/style.css' />
+    <link rel='stylesheet' href='/css/master.css' />
 
     <script type="text/javascript" src="/js/jquery-3.2.1.min.js" defer></script>
     <script type="text/javascript" src="/js/materialize.min.js" defer></script>
   </head>
   <body>
-
-  <div id="bg">
-    <img <!-- src="/images/ball_background_opaque.png" --> alt="">
-  </div>
-
-  <div id="webpage">
 
     <main>
       <div class="center-align">
@@ -37,6 +31,5 @@
         </div>
       </div>
     </footer>
-  </div>
   </body>
 </html>
