--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -32,5 +32,5 @@
    </form>
  </div>
  <div class="center-align">
-   <a class="waves-effect waves-light btn-large"><i class="material-icons left">cloud</i>Register</a>
+   <a href="/register" class="waves-effect waves-light btn-large"><i class="material-icons left">cloud</i>Register</a>
  </div>
