Fix forms on various pages add scaffolding for seeds add main.js which isn't being used and probably doesn't need to exist

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,6 +13,7 @@
 
     <script type="text/javascript" src="/js/jquery-3.2.1.min.js" defer></script>
     <script type="text/javascript" src="/js/materialize.min.js" defer></script>
+    <script type="text/javascript" src="/js/main.js" defer></script>
   </head>
   <body>
 
