--- a/views/pages/family.ejs
+++ b/views/pages/family.ejs
@@ -1,5 +1,7 @@
 <%- contentFor('body') %>
 
+<script type="text/javascript" src="/js/family.js" defer></script>
+
 <% for(let i = 0; i <children.length; i++){ %>
   <div class="row">
          <div class="col s12 m6">
@@ -22,14 +24,24 @@
 
 
   <div class="center-align">
-    <a href="" class="waves-effect waves-light btn-large"><i class="material-icons left">person_add</i>Add Childern</a>
+    <button id="toggle-add-child-form" class="btn-large waves-effect waves-light" type="submit" name="action">Add Children
+      <i class="material-icons right">person_add</i>
+    </button>
+
   </div>
 
+
   <div class="row">
-    <form class="col s6" action="/family/addChild" method="post">
+    <form class="col s12 m6 offset-m3" action="/family/addChild" method="post">
       <div class="row">
         <div class="input-field col s12">
-          <input placeholder="username" id="username" name="username" type="text" class="validate" required>
+          <input id="first_name" type="text" name="first_name" class="validate" required>
+          <label for="first_name">First Name</label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="input-field col s12">
+          <input id="username" name="username" type="text" class="validate" required>
           <label for="username">Username</label>
         </div>
       </div>
@@ -40,14 +52,9 @@
         </div>
       </div>
       <div class="row">
-        <div class="input-field col s12">
-          <input id="first_name" type="first_name" name="first_name" class="validate" required>
-          <label for="first_name">First Name</label>
-        </div>
+        <button type="submit" class="waves-effect waves-light btn-large" type="submit">Let's Make a Child<i class="material-icons right">add_circle</i></button>
       </div>
     </form>
-    <div class="center-align">
-      <a href="" class="waves-effect waves-light btn-large"><i class="material-icons left">add_circle</i>Add</a>
-    </div>
+
 
   </div>
