--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,6 +1,6 @@
 <%- contentFor('body') %>
 <div class="row">
-   <form class="col s6">
+   <form class="col s6" action="/child" method="post">
      <h3>Child Login</h3>
      <div class="row">
        <div class="input-field col s12">
@@ -14,8 +14,12 @@
          <label for="password">Password</label>
        </div>
      </div>
+     <div class="row">
+       <button class="btn" type="submit">Log In<i class="material-icons right">send</i></button>
+     </div>
    </form>
-   <form class="col s6">
+
+   <form class="col s6" action="/family" method="post">
      <h3>Parent Login</h3>
      <div class="row">
        <div class="input-field col s12">
@@ -28,6 +32,9 @@
          <input id="password" type="password" name="password" class="validate">
          <label for="password">Password</label>
        </div>
+     </div>
+     <div class="row">
+       <button class="btn" type="submit">Log In<i class="material-icons right">send</i></button>
      </div>
    </form>
  </div>
