--- a/views/pages/family.ejs
+++ b/views/pages/family.ejs
@@ -4,10 +4,10 @@
 
 <% for(let i = 0; i <children.length; i++){ %>
   <div class="row">
-         <div class="col s12 m6">
+         <div class="col s6 m4 l3">
            <div class="card">
              <div class="card-image">
-               <img src="">
+               <img src="http://lorempixel.com/output/cats-q-c-300-300-2.jpg" >
                <span class="card-title"><%= children[i].first_name %></span>
              </div>
              <div class="card-content">
