--- a/views/pages/family.ejs
+++ b/views/pages/family.ejs
@@ -5,9 +5,9 @@
 <% for(let i = 0; i <children.length; i++){ %>
   <div class="row">
          <div class="col s6 m4 l3">
-           <div class="card">
+           <a href="/family/children/<%= children[i].id %>" class="card">
              <div class="card-image">
-               <img src="http://lorempixel.com/output/cats-q-c-300-300-2.jpg" >
+               <img src="https://picsum.photos/200/200/?random">
                <span class="card-title"><%= children[i].first_name %></span>
              </div>
              <div class="card-content">
@@ -17,7 +17,7 @@
                   <% } %>
                 </ol>
              </div>
-           </div>
+           </a>
          </div>
        </div>
   <% } %>
