Add error display to index

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,4 +1,9 @@
 <%- contentFor('body') %>
+
+<% if (message) { %>
+  <% include ../partials/error.ejs %>
+<% } %>
+
 <div class="row">
    <form class="col s6" action="/child" method="post">
      <h3>Child Login</h3>
