--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,6 +17,16 @@
   </head>
   <body>
 
+    <nav>
+    <div class="nav-wrapper white">
+      <a href="" class="brand-logo center black-text text-darken-2">In Check<i class="large material-icons left icon-red">check</i></a>
+      <ul class="right hide-on-med-and-down">
+        <li><a class="waves-effect waves-light btn"><i class="material-icons">home</i></a></li>
+        <li><a class="waves-effect waves-light btn">Log Out</a></li>
+      </ul>
+    </div>
+  </nav>
+
     <main>
       <div class="center-align">
         <div class="content">
