--- a/public/css/master.css
+++ b/public/css/master.css
@@ -27,3 +27,17 @@ footer.page-footer
 i.icon-red {
     color: red;
 }
+
+/*.nav-wrapper > .brand-logo > i{
+  transform: scale(2);
+}*/
+
+.nav-wrapper{
+  padding-left: 5vw;
+}
+
+
+.nav-wrapper > .brand-logo > img {
+  width: 30px;
+  height: 30px;
+}
