--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -19,10 +19,10 @@
 
     <nav>
     <div class="nav-wrapper white">
-      <a href="" class="brand-logo left black-text text-darken-2"><img src="/images/favicon.ico" alt="">In Check</a>
+      <a href="" class="brand-logo left black-text text-darken-2"><img src="/images/logo.svg" alt="">In Check</a>
       <ul class="right hide-on-med-and-down">
-        <li><a class="waves-effect waves-light btn"><i class="material-icons">home</i></a></li>
-        <li><a class="waves-effect waves-light btn">Log Out</a></li>
+        <li><a href="/" class="waves-effect waves-light btn"><i class="material-icons">home</i></a></li>
+        <li><a href="/logout" class="waves-effect waves-light btn">Log Out</a></li>
       </ul>
     </div>
   </nav>
