--- a/views/pages/family.ejs
+++ b/views/pages/family.ejs
@@ -32,7 +32,7 @@
 
 
   <div class="row">
-    <form class="col s12 m6 offset-m3" action="/family/addChild" method="post">
+    <form class="col s12 m6 offset-m3" action="/family/children/add" method="post">
       <div class="row">
         <div class="input-field col s12">
           <input id="first_name" type="text" name="first_name" class="validate" required>
