--- a/views/pages/editchild.ejs
+++ b/views/pages/editchild.ejs
@@ -1,22 +1,26 @@
 <%- contentFor('body') %>
 
+<% if (message) { %>
+  <% include ../partials/error.ejs %>
+<% } %>
+
 <div class="row">
   <form class="col s12 m6 offset-m3" action="/family/children/edit/<%= child.id %>" method="post">
     <div class="row">
       <div class="input-field col s12">
-        <input id="first_name" type="text" name="first_name" class="validate" tabindex="1" value="child.first_name">
+        <input id="first_name" type="text" name="first_name" class="validate" value="<%=child.first_name%>">
         <label for="username">First Name</label>
       </div>
     </div>
     <div class="row">
       <div class="input-field col s12">
-        <input id="username" type="text" name="username" class="validate" tabindex="1" value="child.username">
+        <input id="username" type="text" name="username" class="validate" value="<%=child.username%>">
         <label for="username">Username</label>
       </div>
     </div>
     <div class="row">
       <div class="input-field col s12">
-        <input id="password" type="password" name="" value="0" tabindex="3" value="child.password">
+        <input id="password" type="password" name="password">
         <label for="value">Reset Password</label>
       </div>
     </div>
