--- a/views/pages/child_parent_view.ejs
+++ b/views/pages/child_parent_view.ejs
@@ -2,6 +2,8 @@
 
 <script type="text/javascript" src="/js/child-parent-view.js" defer></script>
 
+<button type="button" name="button"></button>
+
 <div class="center-align">
     <h3><%= child.first_name %></h3>
     <table class="bordered">
@@ -69,6 +71,13 @@
         <button class="btn" type="submit" tabindex="4">Add Chore</button>
       </form>
 
+
+    </div>
+
+    <div class="center-align">
+      <a href="/family/children/edit/<%=child.id%>"></a><button class="btn-large waves-effect waves-light" type="submit" name="action">Edit Child
+        <i class="material-icons right">edit</i>
+      </button></a>
 
     </div>
 
