--- a/views/pages/child.ejs
+++ b/views/pages/child.ejs
@@ -27,7 +27,7 @@
               <td><%= chores[i].end_date %></td>
               <td><%= chores[i].recur_weekly %></td>
               <td><%= chores[i].value %></td>
-              <td><a href="<%=chores[i].completed ? `chore/incompleted/${chores[i].id}`: `chore/completed/${chores[i].id}` %>"><input type="checkbox" class= "" <%= chores[i].completed ? checked = "checked": ""%> ><label></label></a></td>
+              <td><a href="<%=chores[i].completed ? `/chore/incomplete/${chores[i].id}`: `/chore/complete/${chores[i].id}` %>"><input type="checkbox" class= "" <%= chores[i].completed ? checked = "checked": ""%> ><label></label></a></td>
             </tr>
           <% } %>
       </table>
