created logout button

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,7 +10,7 @@
      <h3>Login</h3>
      <div class="row">
        <div class="input-field col s12">
-         <input placeholder="Placeholder" id="username" name="username" type="text" class="validate">
+         <input autofocus id="username" name="username" type="text" class="validate">
          <label for="username">Username</label>
        </div>
      </div>
@@ -26,5 +26,5 @@
    </form>
  </div>
  <div class="center-align">
-   <a href="/register" class="waves-effect waves-light btn-large"><i class="material-icons left">cloud</i>Register</a>
+   <a href="/register" class="waves-effect waves-light btn-large"><i class="material-icons left">group</i>Register</a>
  </div>
