--- a/views/pages/child_parent_view.ejs
+++ b/views/pages/child_parent_view.ejs
@@ -72,6 +72,7 @@
         </div>
         <input type="text" name="child_id" value="<%= child.id %>" hidden>
         <button class="btn" type="submit" tabindex="4">Add Chore</button>
+
       </form>
 
 </div>
@@ -111,6 +112,11 @@
 
   </div>
     </div>
+    <div class="center-align">
+      <a href=""></a><button class="btn-large waves-effect waves-light" type="submit" name="action">Delete chore
+        <i class="material-icons right">delete</i>
+      </button></a>
+</div>
     <div class="center-align">
       <a href=""></a><button class="btn-large waves-effect waves-light" type="submit" name="action">Delete Child
         <i class="material-icons right">delete</i>
