fixed some icon bugs and added autocomplete class to add chore button

--- a/views/pages/child_parent_view.ejs
+++ b/views/pages/child_parent_view.ejs
@@ -89,7 +89,7 @@
       <form class="col s12 m6 offset-m3" action="/family/chores/add/" method="post">
         <div class="row">
           <div class="input-field col s12">
-            <input id="add-title" type="text" name="title" class="validate" tabindex="1" required>
+            <input id="add-title" type="text" name="title" class="autocomplete" class="validate" tabindex="1" required>
             <label for="add-title">Title</label>
           </div>
         </div>
